Fixed education tab layout and alignment with tabs.

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -223,7 +223,7 @@ input.text {
     width: 120px;
 }
 
-#education-tab {
+#educations-tab {
     width: 80px;
     height: 42px;
     background-color: #EEEEEE;
